onboarding card overflows + some styling fix

--- a/src/features/browse/components/content.module.scss
+++ b/src/features/browse/components/content.module.scss
@@ -67,6 +67,7 @@
   width: 20px;
   height: 20px;
   margin: 0 16px 0 8px;
+  margin-bottom: 16px;
 }
 
 .image {
